End of day commit

--- a/index.html
+++ b/index.html
@@ -25,115 +25,155 @@
 		</div>
 		<nav class="textstyle-heading">
 			<ul class="flex-row">
-				<li>Wer sind wir</li>
-				<li>Wofür wir stehen</li>
-				<li>3. punkt</li>
+				<li><a href="#Wer_wir_sind">Wer sind wir</a></li>
+				<li><a href="#Wofuer_wir_stehen">Wofür wir stehen</a></li>
+				<!--<li>3. punkt</li>-->
 			</ul>
 		</nav>
 	</header>
 
-	<main>
-		<p>
-			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-			dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-			clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-			consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-			sed
-			diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-			takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-			sed
-			diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
-			et
-			accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-			dolor sit amet.
+	<main class="flex-column">
+		<div>
+			<h2 id="Wer_wir_sind" class="textstyle-heading text-heading">Wer wir sind</h2>
+			<div class="textstyle-text">
+				Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+				labore et
+				dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+				Stet
+				clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
+				amet,
+				consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+				erat,
+				sed
+				diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+				sea
+				takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+				elitr,
+				sed
+				diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+				eos
+				et
+				accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+				ipsum
+				dolor sit amet.
 
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
-			feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-			delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing
-			elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
+				dolore eu
+				feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+				zzril
+				delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing
+				elit,
+				sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-			commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-			vel
-			illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-			praesent
-			luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+				Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+				ex ea
+				commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
+				consequat,
+				vel
+				illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
+				praesent
+				luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
 
-			Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer
-			possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-			tincidunt
-			ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-			ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat
+				facer
+				possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+				tincidunt
+				ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+				ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
-			feugiat nulla facilisis.
+				Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
+				dolore eu
+				feugiat nulla facilisis.
 
-			At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus
-			est
-			Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-			tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
-			duo
-			dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-			Lorem
-			ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod
-			eos
-			erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum.
-			sanctus
-			sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-			sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+				At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+				sanctus
+				est
+				Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+				eirmod
+				tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+				justo
+				duo
+				dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+				Lorem
+				ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo
+				eirmod
+				eos
+				erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum.
+				sanctus
+				sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+				consetetur
+				sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
 
-			Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-			sed
-			diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-			takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-			sed
-			diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
-			et
-			accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-			dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-			invidunt
-			ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
-			ea
-			rebum. Stet clita kasd gubergren, no sea takimata sanctus.
+				Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+				erat,
+				sed
+				diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+				sea
+				takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+				elitr,
+				sed
+				diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+				eos
+				et
+				accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+				ipsum
+				dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+				invidunt
+				ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+				et
+				ea
+				rebum. Stet clita kasd gubergren, no sea takimata sanctus.
+			</div>
+		</div>
 
-			Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-			dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-			clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
-			consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-			sed
-			diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-			takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-			sed
-			diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
-			et
-			accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-			dolor sit amet.
+		<div>
+			<h2 id="Wofuer_wir_stehen" class="textstyle-heading text-heading">Wofür wir stehen</h2>
+			<div class="textstyle-text">
+				Small-Letter
 
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
-			feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-			delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing
-			elit,
-			sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-			commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
-			vel
-			illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-			praesent
-			luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-
-			Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer
-			possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-			tincidunt
-			ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-			ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-		</p>
+				dieser text hat eigentlich gar keinen wirklichen inhalt. aber er hat auch keine relevanz, und deswegen
+				ist
+				das egal. er dient lediglich als platzhalter. um mal zu zeigen, wie diese stelle der seite aussieht,
+				wenn
+				ein paar zeilen vorhanden sind. ob sich der text dabei gut fühlt, weiß ich nicht. ich schätze, eher
+				nicht,
+				denn wer fühlt sich schon gut als platzhalter. aber irgendwer muss diesen job ja machen und deshalb kann
+				ich
+				es nicht ändern . ich könnte dem text höchstens ein bisschen gut zureden, dass er auch als platzhalter
+				eine
+				wichtige rolle spielt und durchaus gebraucht wird. könnte mir vorstellen, dass ihm das gut tut. denn das
+				gefühl gebraucht zu werden tut doch jedem gut, oder? klar, er ist austauschbar. das darf ich ihm
+				natürlich
+				nicht verraten. denn austauschbar zu sein, dass ist schrecklich. austauschbar zu sein bedeutet ja
+				eigentlich, dass nicht man selbst, sondern einfach irgendjemand oder irgendwas an der stelle gebraucht
+				wird.
+				somit würde mein erstes argument, man braucht dich, nicht mehr ziehen, und das zuvor erzeugte gute
+				gefühl
+				des textes wäre zunichte gemacht. das will ich nicht. also bitte nix verraten, ja? aber vielleicht merkt
+				er
+				es ja nicht. das wäre gut, denn wer hat schon lust einen deprimierten blindtext auf seiner seite zu
+				platzieren. was würde denn das für einen eindruck machen. das will ja keiner lesen. somit wäre er dann
+				ein
+				für alle mal tatsächlich völlig nutzlos. das wäre sein todesurteil. soweit wollen wir es doch nicht
+				kommen
+				lassen, oder? es sei denn, und das ist möglich, er würde wiedergeboren und käme als, naja, sagen wir als
+				witz, und ein textleben später vielleicht als bildzeitungsartikel auf die textwelt. irgendwann wäre er
+				vielleicht sogar ein text im lexikon. dann hätten wir ihn ja sogar weitergebracht in seiner entwicklung.
+				klingt gar nicht schlecht, oder? trotzdem bin ich der meinung, man sollte ihn nicht bewusst dort hin
+				treiben. er hat ein recht darauf, sich selbst zu entwickeln. und zwar in genau dem tempo, das ihm
+				gefällt.
+				und bis es soweit ist, nehme ich ihn eben an, wie er ist. als einfachen blindtext ohne wirklichen
+				inhalt.
+			</div>
+		</div>
 
 	</main>
 
 	<footer>
-		fußnote
+		<div class="contact">
+			<h3>Kontakt:</h3>
+			fresh.moosburg@gmail.com
+		</div>
 	</footer>
 
 </div>
