--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 	</header>
 	<nav class="textstyle-heading">
 		<ul class="flex-row">
-			<li><a href="#Wer_wir_sind">Wer sind wir</a></li>
-			<li><a href="#Wofuer_wir_stehen">Wofür wir stehen</a></li>
+			<li><a class="hover-blue" href="#Wer_wir_sind">.wer</a></li>
+			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.was</a></li>
+			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.blog</a></li>
+			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.events</a></li>
+			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
 			<!--<li>3. punkt</li>-->
 		</ul>
 	</nav>
