--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="CSS/basestyle.css">
+	<link rel="stylesheet" type="text/css" href="CSS/layout.css">
+	<link rel="stylesheet" type="text/css" href="CSS/header.css">
+	<link rel="stylesheet" type="text/css" href="CSS/footer.css">
 
 
 	<title>FRESH - jung, bunt, aktiv</title>
@@ -13,9 +15,16 @@
 </head>
 <body>
 
-<div class="mainframe grid-conatiner">
+<div id="mainframe" class=" grid-conatiner">
 	<header class="flex-column">
 		<div class="flex-row head-row">
+			<div class="burger_menu" onclick="function toggleBurgerMenu() {
+
+			}
+			toggleBurgerMenu()"
+			>
+				III
+			</div>
 			<div class="title">
 				<!--				<img src="">-->
 				<h1 class="textstyle-heading">F.R.E.S.H. - jung, bunt, aktiv</h1>
@@ -49,83 +58,17 @@
 			</div>
 		</div>
 	</header>
+
+
 	<nav class="textstyle-heading">
 		<ul class="flex-row">
-			<li><a class="hover-blue" href="#Wer_wir_sind">.wer</a></li>
+			<li><a class="hover-blue" href="wer.html">.wer</a></li>
 			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.was</a></li>
 			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.blog</a></li>
 			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.events</a></li>
 			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
-			<!--<li>3. punkt</li>-->
 		</ul>
 	</nav>
-
-	<main class="flex-column">
-		<div>
-			<h2 id="Wer_wir_sind" class="textstyle-heading text-heading">Wer wir sind</h2>
-			<div class="textstyle-text">
-				Wir sind eine bunt zusammengewürfelte Truppe aus jungen Menschen die eines verbindet, der Wille etwas in
-				Moosburg zu verändern und voran zu bringen. Wir haben uns formiert weil wir uns keine Heimat bei den
-				alteingessessenen Parteien gefunden haben und es vieles gibt, dass wir denken, das man in Moosburg zum
-				besseren verändern könnte.
-			</div>
-		</div>
-
-		<div>
-			<h2 id="Wofuer_wir_stehen" class="textstyle-heading text-heading">Wofür wir stehen</h2>
-			<div class="textstyle-text">
-				Small-Letter
-
-				dieser text hat eigentlich gar keinen wirklichen inhalt. aber er hat auch keine relevanz, und deswegen
-				ist
-				das egal. er dient lediglich als platzhalter. um mal zu zeigen, wie diese stelle der seite aussieht,
-				wenn
-				ein paar zeilen vorhanden sind. ob sich der text dabei gut fühlt, weiß ich nicht. ich schätze, eher
-				nicht,
-				denn wer fühlt sich schon gut als platzhalter. aber irgendwer muss diesen job ja machen und deshalb kann
-				ich
-				es nicht ändern . ich könnte dem text höchstens ein bisschen gut zureden, dass er auch als platzhalter
-				eine
-				wichtige rolle spielt und durchaus gebraucht wird. könnte mir vorstellen, dass ihm das gut tut. denn das
-				gefühl gebraucht zu werden tut doch jedem gut, oder? klar, er ist austauschbar. das darf ich ihm
-				natürlich
-				nicht verraten. denn austauschbar zu sein, dass ist schrecklich. austauschbar zu sein bedeutet ja
-				eigentlich, dass nicht man selbst, sondern einfach irgendjemand oder irgendwas an der stelle gebraucht
-				wird.
-				somit würde mein erstes argument, man braucht dich, nicht mehr ziehen, und das zuvor erzeugte gute
-				gefühl
-				des textes wäre zunichte gemacht. das will ich nicht. also bitte nix verraten, ja? aber vielleicht merkt
-				er
-				es ja nicht. das wäre gut, denn wer hat schon lust einen deprimierten blindtext auf seiner seite zu
-				platzieren. was würde denn das für einen eindruck machen. das will ja keiner lesen. somit wäre er dann
-				ein
-				für alle mal tatsächlich völlig nutzlos. das wäre sein todesurteil. soweit wollen wir es doch nicht
-				kommen
-				lassen, oder? es sei denn, und das ist möglich, er würde wiedergeboren und käme als, naja, sagen wir als
-				witz, und ein textleben später vielleicht als bildzeitungsartikel auf die textwelt. irgendwann wäre er
-				vielleicht sogar ein text im lexikon. dann hätten wir ihn ja sogar weitergebracht in seiner entwicklung.
-				klingt gar nicht schlecht, oder? trotzdem bin ich der meinung, man sollte ihn nicht bewusst dort hin
-				treiben. er hat ein recht darauf, sich selbst zu entwickeln. und zwar in genau dem tempo, das ihm
-				gefällt.
-				und bis es soweit ist, nehme ich ihn eben an, wie er ist. als einfachen blindtext ohne wirklichen
-				inhalt.
-			</div>
-		</div>
-		<i class="fab fa-facebook"></i>
-	</main>
-
-	<footer>
-		<div class="contact">
-			<h3>Kontakt:</h3>
-			fresh.moosburg@gmail.com
-		</div>
-		<div class="licensing">
-			<a href="https://fontawesome.com/license">FB-Icon</a>
-			<a href="https://fontawesome.com/license">Instagram-Icon</a>
-		</div>
-	</footer>
-
-
 </div>
 </body>
 </html>
