--- a/wer.html
+++ b/wer.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<link rel="stylesheet" type="text/css" href="CSS/layout.css">
-	<link rel="stylesheet" type="text/css" href="CSS/header.css">
-	<link rel="stylesheet" type="text/css" href="CSS/footer.css">
+	<link href="CSS/layout.css" rel="stylesheet" type="text/css">
+	<link href="CSS/header.css" rel="stylesheet" type="text/css">
+	<link href="CSS/navigation.css" rel="stylesheet" type="text/css">
+	<link href="CSS/main.css" rel="stylesheet" type="text/css">
+	<link href="CSS/footer.css" rel="stylesheet" type="text/css">
 
 
 	<title>FRESH.wer</title>
@@ -17,53 +19,38 @@
 
 <body>
 
-<div id="mainframe" class=" grid-conatiner grid_desktop grid_mobile grid_mobile_menu_hidden">
-	<header class="flex-column">
-		<div class="flex-row head-row">
-			<div class="burger_menu" onclick="function toggleBurgerMenu() {
-				if (document.getElementById('mainframe').classList.contains('grid_mobile_menu_hidden'))
-					{
-						document.getElementById('mainframe').classList.remove('grid_mobile_menu_hidden');
-						document.getElementsByTagName('nav')[0].classList.remove('mobile_hidden');
-						document.getElementsByTagName('nav')[0].classList.remove('mobile_hidden');
-						document.getElementById('mainframe').classList.add('grid_mobile_menu_shown');
-					}
-				else{
-						document.getElementById('mainframe').classList.remove('grid_mobile_menu_shown');
-						document.getElementsByTagName('nav')[0].classList.add('mobile_hidden');
-						document.getElementById('mainframe').classList.add('grid_mobile_menu_hidden');
-				}
-			}
-			toggleBurgerMenu()"
-			>
+<div class="grid_conatiner" id="mainframe">
+	<header class="flex_column">
+		<div class="flex_row head_row">
+			<div class="burger_menu">
 				III
 			</div>
 			<div class="title">
 				<!--				<img src="">-->
-				<h1 class="textstyle-heading">F.R.E.S.H. - jung, bunt, aktiv</h1>
+				<h1 class="textstyle_heading">F.R.E.S.H. - jung, bunt, aktiv</h1>
 			</div>
 
-			<div class="social-media-banner flex-row">
-				<div class="sm-link-container">
+			<div class="sm_banner flex_row">
+				<div class="sm_link_container">
 					<a class="facebook" href="facebook.de">
 						<svg focusable="false"
-							 xmlns="http://www.w3.org/2000/svg"
 							 viewBox="0 0 512 512"
+							 xmlns="http://www.w3.org/2000/svg"
 						>
-							<path fill="currentColor"
-								  d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
+							<path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
+								  fill="currentColor"
 							/>
 						</svg>
 					</a>
 				</div>
-				<div class="sm-link-container">
+				<div class="sm_link_container">
 					<a class="instagram" href="instagramm.de">
 						<svg focusable="false"
-							 xmlns="http://www.w3.org/2000/svg"
 							 viewBox="0 0 448 512"
+							 xmlns="http://www.w3.org/2000/svg"
 						>
-							<path fill="currentColor"
-								  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+							<path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+								  fill="currentColor"
 							/>
 						</svg>
 					</a>
@@ -73,20 +60,20 @@
 	</header>
 
 
-	<nav class="textstyle-heading mobile_hidden">
-		<ul class="flex-row">
-			<li><a class="hover-blue" href="wer.html">.wer</a></li>
-			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.was</a></li>
-			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.blog</a></li>
-			<li><a class="hover-magenta" href="#Wofuer_wir_stehen">.events</a></li>
-			<li><a class="hover-blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
+	<nav class="textstyle_heading mobile_hidden">
+		<ul class="flex_row nav_row">
+			<li><a class="hover_blue" href="wer.html">.wer</a></li>
+			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.was</a></li>
+			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.blog</a></li>
+			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.events</a></li>
+			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
 		</ul>
 	</nav>
 
-	<main class="flex-column">
+	<main class="flex_column">
 		<div>
-			<h2 id="Wer_wir_sind" class="textstyle-heading text-heading">Wer wir sind</h2>
-			<div class="textstyle-text">
+			<h2 class="textstyle_heading text_heading" id="Wer_wir_sind">Wer wir sind</h2>
+			<div class="">
 				Wir sind eine bunt zusammengewürfelte Truppe aus jungen Menschen die eines verbindet, der Wille etwas in
 				Moosburg zu verändern und voran zu bringen. Wir haben uns formiert weil wir uns keine Heimat bei den
 				alteingessessenen Parteien gefunden haben und es vieles gibt, dass wir denken, das man in Moosburg zum
@@ -95,8 +82,8 @@
 		</div>
 
 		<div>
-			<h2 id="Wofuer_wir_stehen" class="textstyle-heading text-heading">Wofür wir stehen</h2>
-			<div class="textstyle-text">
+			<h2 class="textstyle_heading text_heading" id="Wofuer_wir_stehen">Wofür wir stehen</h2>
+			<div class="">
 				Small-Letter
 
 				dieser text hat eigentlich gar keinen wirklichen inhalt. aber er hat auch keine relevanz, und deswegen
@@ -138,14 +125,10 @@
 	</main>
 
 	<footer>
-		<div class="contact">
-			<h3>Kontakt:</h3>
-			fresh.moosburg@gmail.com
-		</div>
-		<div class="licensing">
-			<a href="https://fontawesome.com/license">FB-Icon</a>
-			<a href="https://fontawesome.com/license">Instagram-Icon</a>
-		</div>
+		<ul class="flex_row foot_row">
+			<li><a class="hover_blue" href="kontakt.html">.kontakt</a></li>
+			<li><a class="hover_magenta" href="impressum.html">.impressum</a></li>
+		</ul>
 	</footer>
 </div>
 </body>
