--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</a>
 				</div>
 				<div class="sm_link_container">
-					<a class="instagram" href="instagramm.de">
+					<a class="instagram" href="instagram.de">
 						<svg focusable="false"
 							 viewBox="0 0 448 512"
 							 xmlns="http://www.w3.org/2000/svg"
@@ -61,10 +61,10 @@
 	<nav class="textstyle_heading mobile_hidden">
 		<ul class="flex_row nav_row">
 			<li><a class="hover_blue" href="wer.html">.wer</a></li>
-			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.was</a></li>
-			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.blog</a></li>
-			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.events</a></li>
-			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
+			<li><a class="hover_magenta" href="wofuer.html">.was</a></li>
+			<li><a class="hover_blue" href="blog.html">.blog</a></li>
+			<li><a class="hover_magenta" href="events.html">.events</a></li>
+			<li><a class="hover_blue" href="unterstützen.html">.unterstützen</a></li>
 		</ul>
 	</nav>
 
