--- a/wer.html
+++ b/wer.html
@@ -63,10 +63,10 @@
 	<nav class="textstyle_heading mobile_hidden">
 		<ul class="flex_row nav_row">
 			<li><a class="hover_blue" href="wer.html">.wer</a></li>
-			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.was</a></li>
-			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.blog</a></li>
-			<li><a class="hover_magenta" href="#Wofuer_wir_stehen">.events</a></li>
-			<li><a class="hover_blue" href="#Wofuer_wir_stehen">.unterstützen</a></li>
+			<li><a class="hover_magenta" href="wofuer.html">.was</a></li>
+			<li><a class="hover_blue" href="blog.html">.blog</a></li>
+			<li><a class="hover_magenta" href="events.html">.events</a></li>
+			<li><a class="hover_blue" href="unterstützen.html">.unterstützen</a></li>
 		</ul>
 	</nav>
 
@@ -117,7 +117,7 @@
 				klingt gar nicht schlecht, oder? trotzdem bin ich der meinung, man sollte ihn nicht bewusst dort hin
 				treiben. er hat ein recht darauf, sich selbst zu entwickeln. und zwar in genau dem tempo, das ihm
 				gefällt.
-				und bis es soweit ist, nehme ich ihn eben an, wie er ist. als einfachen blindtext ohne wirklichen
+				und bis es soweit ist, nehme ich ihn eben an, wie er ist. als einfachen Blindtext ohne wirklichen
 				inhalt.
 			</div>
 		</div>
